# momentum-trader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  sina_demo.yaml
docs/: CONTEXT.md  open-questions.md
docs/adr/: 0001-keep-scope-long-only-a-share-etf-momentum.md  0002-keep-real-trade-execution-manual.md  0003-use-forward-adjusted-etf-prices.md  0004-do-not-synthesize-missing-etf-bars.md  0005-allow-nested-positive-signal-expressions.md  0006-separate-signal-shape-intent-and-applicability.md  0007-keep-signal-expressions-market-data-only.md  0008-use-three-valued-signal-rule-results.md  0009-rank-entry-candidates-by-breakout-momentum.md  0010-split-etf-backtest-trading-costs.md
src/momentum_trader/: __init__.py  cli.py  config.py
src/momentum_trader/backtest/: __init__.py  analyzers.py  broker.py  bt_strategy.py  engine.py  trade_log.py
src/momentum_trader/data/: __init__.py  akshare_client.py  cache.py  loader.py  schema.py
src/momentum_trader/report/: __init__.py  exports.py  html_report.py  metrics.py  plots.py  run_outputs.py
src/momentum_trader/strategy/: __init__.py  position_state.py  rules.py  signals.py
src/momentum_trader/utils/: calendar.py  logging.py
tests/: test_backtest_engine.py  test_broker.py  test_cache.py  test_position_state.py  test_pyramid_rules.py  test_run_outputs.py  test_signals.py
