[project]
name = "momentum-trader"
version = "0.1.0"
description = "A-share ETF momentum strategy backtesting scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.15.0",
    "backtrader>=1.9.78.123",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
momentum-trader = "momentum_trader.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

